src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
                <color>#F3D904</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Manager</relationshipLabel>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGS-{000000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Manager_cannot_be_null</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(Manager__c) = 0</errorConditionFormula>
        <errorDisplayField>Manager__c</errorDisplayField>
        <errorMessage>Please enter manager details</errorMessage>
    </validationRules>
</CustomObject>